# MarkdownAssistant

./: AUDIT_REPORT.md  DEVELOPER_MANUAL.md  FLOWCHART_EXAMPLES.md  MODE_SWITCH_DEEP_AUDIT.md  MODE_SWITCH_FIX.md  PROJECT_AUDIT_REPORT.md  README.md  TEST_PLAN.md  TROUBLESHOOTING_REPORT.md  UNSAVED_CHANGES_FIX.md  USER_MANUAL.md  example.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js  审计建议实施计划.md  用户使用手册.md  程序审计评估报告.md  程序开发手册.md  项目完成总结.md
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src/i18n/: index.js
src/i18n/locales/: en-US.json  zh-CN.json
src/modules/: editor.js  fileManager.js  historyManager.js  pdfExporter.js  themeManager.js
src/plugins/: pluginManager.js
src/plugins/examples/: wordCounter.js
src/utils/: constants.js  errorHandler.js  helpers.js  performanceMonitor.js
tests/: helpers.test.js  historyManager.test.js  i18n.test.js  performanceMonitor.test.js  pluginManager.test.js  setup.js  themeManager.test.js
