[package]
name = "markdown-assistant"
version = "1.0.0"
description = "A powerful markdown editor built with Tauri and Vditor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "window-hide", "fs-write-file", "window-start-dragging", "window-show", "window-maximize", "window-minimize", "window-unmaximize", "dialog-message", "fs-read-dir", "dialog-confirm", "window-close", "dialog-ask", "fs-exists", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
